public/css/player.css
/* ... */
#list-view {
   height: 100%;
   margin-left: 240px;
   overflow: hidden;
}

#loading-list {
   position: absolute;
   display: none;
   bottom: 0px;
   z-index: 100;
}

#list-cover {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   opacity: 0.5;
   background: #fff;
   z-index: 50;
}

/* speenkeet */
.spinner {
   width: 99%;
   height: 55%;
   text-align: center;
   font-size: 10px;
}

.spinner > div {
   background-color: #cdcdcd;
   height: 100%;
   width: 7px;
   height: 60px;
   display: inline-block;
   margin: 1px;

   -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
   animation: stretchdelay 1.2s infinite ease-in-out;
}

.spinner .rect2 {
   -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
}

.spinner .rect3 {
   -webkit-animation-delay: -1.0s;
   animation-delay: -1.0s;
}

.spinner .rect4 {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
}

.spinner .rect5 {
   -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
}

@-webkit-keyframes stretchdelay {
   0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
   20% { -webkit-transform: scaleY(1.0) }
}

@keyframes stretchdelay {
   0%, 40%, 100% { 
      transform: scaleY(0.4);
      -webkit-transform: scaleY(0.4);
   }  20% { 
      transform: scaleY(1.0);
      -webkit-transform: scaleY(1.0);
   }
}
/* end speenkeet */

#link-list {
   transition: all 1s ease-in-out;
   -moz-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
   position: absolute;
   top: 340px;
   bottom: 0px;
   left: 0;
   right: 0;
   width: 100%;
   text-align: left;
}

#list-head {
   position: relative;
   height: 30px;
   text-align: left;
   line-height: 30px;
   background: white;
   margin-right: 14px;
   border-bottom: solid 1px #efefef;
}

#empty-list {
   position: absolute;
   width: 350px;
   top: 30%;
   left: 50%;
   margin-left: -175px;
   opacity: 0.3;
   display: none;
   text-align: center;
}

#empty-list .text-body {
   width: 300px;
   margin: auto;
   margin-bottom: 20px;
}

#empty-list .add-many,
#empty-list .add-one {
   cursor: pointer;
}

#empty-list .add-many {
   margin-right: 30px;
}

#empty-list .add-one {
   margin-left: 30px;
}


.sort-arrow {
   float: right;
   margin-right: 15%;
   margin-top: 10px;
}

#list-body {
   overflow-y: scroll;
   width: 100%;
   position: absolute;
   bottom: 0px;
   top: 30px;

}

.col-head {
   display: inline-block;
   font-weight: 700;
   padding-right: 5px;
}

.col-head.sortable {
   cursor: pointer;
}

.wrapped-link {
   position: relative;
   height: 25px;
   line-height: 25px;
   vertical-align: bottom;
   border-bottom: solid 1px #efefef;
   cursor: default;
}

.wrapped-link:hover .play {
   background-image: url('/img/playIcon.png');
}

.wrapped-link:hover .grab-link {
   display: block;
}

.wrapped-link .play:hover {
   cursor: pointer;
}

.play {
   background-repeat: no-repeat;
   background-position: center;
}

/* columns */
.col-zero {
   width: 3%;
}

.col-one {
   width: 29%;
}

.col-two {
   width: 29%;
}

.col-three {
   width: 26%;
}

.col-four {
   width: 9%;
}
/* end columns */

.item-content {
   display: inline-block;
   height: 25px;
   position: relative;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   line-height: 25px;
   vertical-align: bottom;
   padding-right: 5px;
}

/* player */
#player-view {
   transition: all 1s ease-in-out;
   -moz-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
   height: 300px;
}

#player {
   float: left;
   height: 100%;
   width: 75%;
   background: #1b1b1b;
}

#suggestion-feed {
   position: relative;
   float: right;
   width: 25%;
   height: 100%;
   background: #1b1b1b;
   overflow: hidden;
   overflow-y: scroll;
}

.feed-logo {
   position: absolute;
   top: 50%;
   right: 50%;
   margin-right: -90px;
   margin-top: -70px;
}

.suggestion {
   position: relative;
   height: 55px;
   width: 100%;
   overflow: hidden;
   color: #ababab;
   font-size: 12px;
   cursor: pointer;
}

.suggestion .details {
   margin-left: 75px;
   margin-right: 10px;
   margin-top: 8px;
   height: 36px;
   overflow: hidden;
}

.suggestion .artist {
   line-height: 18px;
   font-weight: 600;
   font-size: 12px;
}

.suggestion .title {
   line-height: 18px;
   font-size: 15px;
}

.suggestion:hover {
   background: #454545;
}

.suggestion .thumb {
   position: absolute;
   top: 8px;
   left: 10px;
}

/* resize buttons */
#resize-buttons {
   height: 15px;
   position: absolute;
   top: 0;
   left: 50%;
   margin-left: -37.5px;
   border-radius: 2px;
}

.resize-player {
   display: inline-block;
   width: 15px;
   margin-left: 2px;
   margin-right: 2px;
   line-height: 15px;
   vertical-align: center;
   height: 15px;
}

.size-button {
   background: #bababa;
}

.size-button:hover {
   background: #ababab;
}

#large-view .size-button {
   margin-top: 2px;
   height: 10px;
}

#normal-view .size-button {
   margin-top: 2px;
   height: 6px;
}

#no-view .size-button {
   margin-top: 2px;
   height: 2px;
}

.resize-player:hover {
   cursor: pointer;
}

.item-options {
   background-repeat: no-repeat;
   background-position: center;
}

.playing {
   background-image: url('/img/playing.png');
}

/* menus */
#add-menu {
   display: none;
   position: absolute;
   top: -140px;
   left: -50px;
}

.player-modal {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   position: absolute;
   width: 90%;
   left: 0;
   right: 0;
   margin: auto;
   max-width: 500px;
   top: 20%;
   z-index: 1000;
   background: white;
   padding-top: 20px;
}

.player-modal label {
   text-align: left;
}

.player-modal input[type=text],
.player-modal input[type=password] {
   position: relative;
   width: 90%;
   height: 25px;
   border: solid 1px #dfdfdf;
   display: inline-block;
   margin: auto;
}

.player-modal input[type=checkbox] {
   margin-right: 10px;
}
/* ... */

